# puppy

./: .gitignore  Dockerfile-Node  Dockerfile-Python  Dockerfile-Reporter  Dockerfile-Ruby  Dockerfile-Seidr  README.md  context.json  feature_toggles.json  hydrate.sh  main.py  report.py  run-client-spec.sh  run-puppy-server.sh  run-report.sh  run-test.sh  run.sh  spin-seidr.sh  testfile.json
dotnet/: Dockerfile
dotnet/harness/: NuGet.Config  Program.cs  dotnet.csproj  harness.sln
go/: Dockerfile
go/harness/: go.mod  go.sum  main.go
harness/dotnet/: Dockerfile
harness/dotnet/runner/: Program.cs  dotnet.csproj
harness/node/: Dockerfile
harness/python/: Dockerfile
harness/ruby/: Dockerfile
java/: Dockerfile
java/harness/: settings.gradle.kts
java/harness/app/: build.gradle.kts
java/harness/app/src/main/java/org/example/: App.java
java/harness/app/src/test/java/org/example/: AppTest.java
java/harness/gradle/: libs.versions.toml
node/: Dockerfile
node/harness/: index.js
php/: Dockerfile
php/harness/: main.php
python/: Dockerfile
python/harness/: main.py
ruby/: Dockerfile
ruby/harness/: main.rb
scaffolds/ruby/: main.rb
templates/: report_template.html
ygg/: Dockerfile
ygg/harness/: Cargo.toml
ygg/harness/src/: main.rs
