[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unleash-yggdrasil = { path = "../yggdrasil/unleash-yggdrasil" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11", features = ["json", "blocking"] }
unleash-types = "0.13.0"